--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,8 @@ permalink: /contact/
         <span>Join Us on Slack</span>
       </a>
 
-      <a class="btn-standard" href="">
+
+        <a class="btn-standard" href="mailto:oss.sustainability.lab@gmail.com" target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
             <path d="M22 4.5H2V20.5H22V4.5ZM4 18.5V6.5H20V18.5H4ZM8 8.5H6V10.5H8V12.5H10V14.5H14V12.5H16V10.5H18V8.5H16V10.5H14V12.5H10V10.5H8V8.5Z" fill="white"/>
           </svg>
