--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ id: home
         </button>
       </div>
 
-      <a class="btn" href="/programs/">
+      <a class="btn" href="{{ site.baseurl }}/programs/">
         <span>Learn More</span>
         <span>
           <svg width="25" height="25" viewBox="0 0 25 25" fill="none">
