--- a/team.html
+++ b/team.html
@@ -25,7 +25,7 @@ permalink: /team/
 <hr />
 
 <div class="wrapper-thin py-6 py-lg-8 text-center">
-  <p class="h2">The OSS Sustainability Lab is an independent, grant-funded project, supported by the Wellcome trust. </p>
+  <p class="h2">The OSS Sustainability Lab is an independent, grant-funded project, supported by the Wellcome Trust. </p>
 
   <img class="mt-4" src="{{ site.baseurl }}/assets/images/wellcome-logo-black.png" alt="Wellcome" />
 </div>
