--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ id: home
       </svg>
 
       <div class="rte">
-        <p class="h3 text-gray">The OSS Sustainability Lab is a program developed for the 2024 cohort of EOSS grantees. It specifically targets the skills that scientific researchers historically struggle with, including community outreach, interdisciplinary networking, establishing career pathways, leveraging institutional support, and measuring community health. This strategic and design-oriented work draws on a range of approaches (you can see some of our influences and inspiration).</p>
+        <p class="h3 text-gray">The OSS Sustainability Lab targets the skills that scientific researchers historically struggle with, including community outreach, interdisciplinary networking, leveraging institutional support, and measuring community health. This strategic and design-oriented work draws on a range of approaches (you can see some of our influences and inspiration).</p>
 
         <a class="btn" href="{{ site.baseurl }}/programs/">
           <span>Read More</span>
