--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ id: home
       <path d="M31.3,62.5h-14.7v6.3c0,1.1.9,2,2,2h14.7v-6.3c0-1.1-.9-2-2-2Z" fill="#fff"/>
     </svg>
     <div>
-      <h1 class="h0"><span class="underline-blue">Imagine</span>, <span class="underline-green">design</span> and <span class="underline-pink">engage</span> with open source sustainability</h1>
+      <h1 class="h0"><span class="underline-blue">Helping you imagine</span>, <span class="underline-green">design</span>, and <span class="underline-pink">engage</span></h1>
     </div>
   </div>
 
