--- a/programs.html
+++ b/programs.html
@@ -43,7 +43,7 @@ permalink: /programs/
   <article class="program-card-sm card--medium">
     <div>
       <h2 class="h2">In-person workshop</h2>
-      <p class="h4">An in-person workshop will be offered to EOSS Wellcome and Kavli grantees in June 2025. Travel and accommodation expenses will be covered for 1 participant from each grantee team. A hybrid workshop for all EOSS grantees will be offered at the end of the program in fall of 2025.</p>
+      <p class="h4">An in-person workshop will be offered to EOSS Wellcome and Kavli grantees in late 2025 or early 2026. Travel and accommodation expenses will be covered for 1 participant from each grantee team. A hybrid workshop for all EOSS grantees will be offered in June 2025.</p>
     </div>
 
     <figure>
