Footer update and resource separation

--- a/curriculum.html
+++ b/curriculum.html
@@ -260,3 +260,44 @@ permalink: /curriculum/
     </div>
   </div>
 </div>
+
+
+<div class="wrapper">
+  <hr class="hr--thick" />
+
+  <div class="py-6 column--has-bg">
+    <h2 class="h1 h1--thick mb-2">Resources</h2>
+    <div class="rte rte--lg rte--light">
+      <p>An incomplete list of writings and resources we used, learned from, and were inspired by.</p>
+    </div>
+
+    <div class="embed-wrap">
+      <iframe src="https://outrageous-aftershave-22a.notion.site/ebd//24537b301040801bbc55ea3dee833731" frameborder="0"
+        width="1920" height="1109" allowfullscreen="true" mozallowfullscreen="true"
+        webkitallowfullscreen="true"></iframe>
+    </div>
+
+    <svg width="40%" viewBox="0 0 292 305" fill="none">
+      <g filter="url(#filter0_f_211_2133)">
+        <path
+          d="M192.71 198.317C195.459 201.058 199.189 202.598 203.079 202.598L239.463 202.612C246.388 202.615 252 208.211 252 215.113V252.499C252 259.405 246.382 265.003 239.452 265L201.925 264.982C194.997 264.978 189.385 259.378 189.39 252.472L189.416 216.158C189.416 212.828 187.483 208.177 185.121 205.822L184.614 205.317C181.863 202.575 178.134 201.034 174.244 201.034H90.3466C87.5343 201.034 84.8362 202.15 82.848 204.131C80.9569 206.016 79.8943 208.571 79.8943 211.238V227.606C79.8943 234.51 74.2791 240.107 67.3525 240.107H52.5535C45.6307 240.107 40.0171 234.516 40.0116 227.616L40 212.879C39.9945 205.971 45.6113 200.369 52.5418 200.369H68.7463C71.5744 200.369 74.2852 199.25 76.2834 197.258L76.742 196.801C78.626 194.923 79.6843 192.377 79.6843 189.721L79.6646 105.168C79.663 98.2629 85.2786 92.6645 92.2064 92.6645H175.816C181.524 92.6645 186.152 88.0521 186.152 82.3619V52.5004C186.152 45.5957 191.769 39.9986 198.696 40L228.075 40.0058C235.003 40.0072 240.617 45.607 240.614 52.512L240.601 81.7896C240.597 88.6782 235.006 94.2653 228.094 94.2693L224.338 94.2703H199.299C193.288 94.2703 188.413 98.3589 188.413 105.12V187.982C188.413 191.858 189.958 195.575 192.71 198.317Z"
+          fill="url(#paint0_linear_211_2133)" />
+      </g>
+      <defs>
+        <filter id="filter0_f_211_2133" x="0" y="0" width="292" height="305" filterUnits="userSpaceOnUse"
+          color-interpolation-filters="sRGB">
+          <feFlood flood-opacity="0" result="BackgroundImageFix" />
+          <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
+          <feGaussianBlur stdDeviation="20" result="effect1_foregroundBlur_211_2133" />
+        </filter>
+        <linearGradient id="paint0_linear_211_2133" x1="96.68" y1="121.967" x2="211.904" y2="235.098"
+          gradientUnits="userSpaceOnUse">
+          <stop stop-color="#00FFFF" />
+          <stop offset="0.5" stop-color="#00FF00" />
+          <stop offset="1" stop-color="#FFC0CB" />
+        </linearGradient>
+      </defs>
+    </svg>
+  </div>
+
+</div>
