--- a/curriculum.html
+++ b/curriculum.html
@@ -81,42 +81,44 @@ permalink: /curriculum/
 
     </div>
     <div class="rte rte--lg rte--light">
-      <p>The core working thesis of the Lab is that sustainability is the capacity for change. What does that mean? Many
-        projects interested in their sustainability (who feel like the work is unsustainable) recognize there is a gap
-        between where the team or the project are and where they want the team or the project to be. One task we take on
-        in the lab is to begin to articulate those two places (where you are now and where you want to be) and begin to
-        understand how you behave in each.</p>
+      <p>The core working thesis of the OSS Lab is that <em>sustainability is the capacity for change</em></is>. What
+        does
+        that mean?
+        Many projects interested in their sustainability (who feel like their work is <em>unsustainable</em>) recognize
+        there is
+        a gap between where a team or a project is and where they want to be. The OSS Lab helps you articulate those two
+        places (where you are now and where you want to be) and helps you understand how you behave in each.</p>
 
-      <p>Studying our behavior is crucial to understanding where we are and where we want to be. You may be tempted to
-        understand your projects as code, libraries, or repositories. In the Lab, we invite you to understand your
-        projects as activities and behaviors.</p>
+      <p>Studying behavior is crucial to understanding where you are and where you want to be. You may be tempted to
+        understand your projects as code, libraries, or repositories. In the OSS Lab, we work with you to understand
+        your projects through activities and behaviors.</p>
 
-      <p>Articulating the values that underpin and drive those activities will help you understand how to organize,
-        develop, and recruit others to those activities (community engagement) and help build the accountability
-        structures (governance) to support others in those activities.</p>
+      <p>Articulating the values that underpin and drive activities and behaviors will help you understand how to
+        organize, develop, and recruit others (community engagement) and help build the accountability structures
+        (governance) to support others.</p>
 
-      <p>Work in the Lab helps you see yourself (your team, your project) from the outside. This helps you identify the
-        behaviors that are keeping you where you are and help you practice other ways of working.</p>
+      <p>Work in the OSS Lab helps you see yourself (your team, your project) from the outside. This helps you identify
+        the behaviors and activities that are keeping you where you are and help you practice new ways of working to get
+        to where you want to be. </p>
 
       <p>For example, in psychiatry, "insight" is the capacity to recognize and accept one is suffering from a disease.
-        When we say "this work is unsustainable" we might mean: "I feel unwell doing it" but we often can't see the big
-        picture, what is making it feel so bad. We struggle to diagnose the disease, saying if we had more money, more
-        people, it would be better. Often, however, 'more' isn't actually a sustainable solution. More grants means more
-        reporting, more staff/contractors to manage; et al.</p>
+        When we say "this work is unsustainable" we might mean: "I feel unwell doing it" but we often cannot see a
+        bigger picture, a picture of what is making it feel so bad. We struggle to diagnose challenges, saying if we had
+        more money, more people, it would be better. However, 'more' is not always a sustainable solution. More grants
+        can mean more reporting, more staff/contractors to manage, and more project administrative work.</p>
 
-      <p>But comradery, connection, relationships, and trial and error can help us identify what about what we are doing
-        is "unsustainable" and direct resources and shift behaviors accordingly. This is what we mean by building your
-        capacity for change; capacity to see and change your behaviors, changing your project.</p>
+      <p>In the OSS Lab, we explore how comradery, connection, relationships, and trial and error can help identify what
+        is "unsustainable" and direct resources and shift behaviors and activities accordingly. This is what building a
+        capacity for change is; capacity to see and change your activities and behaviors, subsequently changing your
+        project. Importantly, in the OSS Lab we identify that change might be additive but it also might be subtractive.
+        Sustainability might mean stopping, shifting, changing, and ending aspects of what we're doing. </p>
 
-      <p>Importantly, in the Lab we identify that change might be additive but it also might be subtractive.
-        Sustainability might mean stopping. Shifting, changing, also stopping; ending, closing, are intrinsic not only
-        to sustainability but survival.</p>
+      <p>Very little about any of our work today is 'sustainable' (e.g., climate, care, and incentive structures). We
+        don't have a fix for these. Instead, we pause to reflect on what needs to change in how we're building. When we
+        focus on how, the what starts to change as well. </p>
 
-      <p>Very little about any of our work today is 'sustainable' (climate, care, incentive structures, et al.). We
-        don't have a fix for these. But! We can work together to shift our behaviors and produce change.</p>
-
-      <p>Join us in six modules designed to help you develop insight, articulate your values, iterate on solutions,
-        drive you into community, discover what you can stop, and become more sustainable.</p>
+      <p>Join us in seven modules designed to help you develop insight, articulate your values, iterate on solutions,
+        foster community, discover what you can stop, and become more sustainable.</p>
     </div>
   </div>
 </div>
@@ -149,14 +151,15 @@ permalink: /curriculum/
       </svg>
     </div>
     <div class="rte rte--lg rte--light">
-      <p>Modules are made to stand alone, but used in sequence they mirror the experience of a synchronous cohort in the
-        Lab. Engage them on your own, do exercises with other members of your team, or colleagues on a different
-        project. Bring others along for the ride! You’ll be surprised how much more you get out of it.</p>
+      <p>Modules are made to stand alone, but used in sequence they mirror the experience of a synchronous cohort from
+        the OSS Lab. Engage them on your own, do exercises with other members of your team, or colleagues on a different
+        project. Bring others along for the ride! You’ll be surprised how much more you get out of it when others are
+        involved.</p>
     </div>
     <div class="rte rte--lg rte--light">
-      <p>And let us know how it goes for you! We want to hear about your journey. Similarly, if you are a funder or
-        other institution interested in providing synchronous support for your grantees/ teams/ project, you can reach
-        Lab facilitators at <a href="mailto:oss.sustainability.lab@gmail.com">oss.sustainability.lab@gmail.com</a>.</p>
+      <p>Let us know how it goes for you! We want to hear about your journey. Similarly, if you are a funder or other
+        institution interested in providing synchronous support for your grantees/ teams/ project, you can reach Lab
+        facilitators at <a href="mailto:oss.sustainability.lab@gmail.com">oss.sustainability.lab@gmail.com</a>.</p>
     </div>
 
   </div>
